# reader_utils

./: .gitignore  pyproject.toml  reader.py
py_utils/: __init__.py  base.py  infoclinic.py  reader.py  readme.md
test/: SPRAV_CC_DIRECTIONS.DBF  w.xlsx  w2.xlsx
