[tool.poetry]
name = "py_utils"
version = "0.1.0"
description = ""
authors = ["de"]
readme = "README.md"
packages = [{include = "py_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
dbfread = "^2.0.7"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
